--- a/common.blocks/social-link-box/social-link-box.styl
+++ b/common.blocks/social-link-box/social-link-box.styl
@@ -1,5 +1,5 @@
 @import "../../libs/bem-components/design/colors.styl"
 @import "../../libs/bem-components/design/spaces.styl"
 
-.social-comment-text
-  margin-bottom: $s
+.social-link-box {
+}
