--- a/common.blocks/social-comment-answer/social-comment-answer.styl
+++ b/common.blocks/social-comment-answer/social-comment-answer.styl
@@ -4,4 +4,8 @@
 .social-comment-answer
   position: relative
   padding-left: $xl
-  
+  margin-bottom: $s
+  &:last-child
+    margin-bottom: 0
+  &:first-child
+    margin-top: $s
