--- a/common.blocks/social-comment-answer/__image/social-comment-answer__image.styl
+++ b/common.blocks/social-comment-answer/__image/social-comment-answer__image.styl
@@ -5,9 +5,9 @@
   position: absolute
   top: 0
   left: 0
-  background-image url('/i/Sheryl.jpg')
   background-repeat: no-repeat
   background-size: 100%
   width: 34px
   height: 34px
   border-radius: 4px
+  overflow: hidden
