--- a/common.blocks/social-comment-answer/__text/social-comment-answer__text.styl
+++ b/common.blocks/social-comment-answer/__text/social-comment-answer__text.styl
@@ -1,5 +1,5 @@
 @import "../../../libs/bem-components/design/colors.styl"
 @import "../../../libs/bem-components/design/spaces.styl"
 
-.social-comment__link-box
-  margin-bottom: $s
+.social-comment-answer__text
+  line-height: 1.2em
