--- a/common.blocks/social-comment/__image/social-comment__image.styl
+++ b/common.blocks/social-comment/__image/social-comment__image.styl
@@ -2,12 +2,10 @@
 @import "../../../libs/bem-components/design/spaces.styl"
 
 .social-comment__image
-  background-image: url('/i/zuckerberg.jpg')
-  background-repeat: no-repeat
-  background-size: 100%
   width: 60px
   height: 60px
   position: absolute
   top: 24px
   left: 24px
   border-radius: 4px
+  overflow: hidden
